Feat: create resource folder, do css for nav bar

--- a/index.html
+++ b/index.html
@@ -3,9 +3,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--CSS-->
+    <link rel="stylesheet" href="/Resource/css/style.css?v=<?php echo time(); ?>">
+
+    <!--ICONSCOUT CSS-->
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+
     <title>Document</title>
 </head>
 <body>
-    
+    <nav>
+        <div class="logo-name">
+            <div class="logo-image">
+                <img src="/Resource/img/logo.png" alt="">
+            </div>
+            <span class="logo_name">BETTER HOMES</span>
+        </div>
+        <div class="menu-items">
+            <ul class="nav-links">
+                <li><a href="#">
+                    <i class="uil uil-estate"></i>
+                    <span class="link-name">Dashboard</span>
+                </a></li>
+                <li><a href="#">
+                    <i class="uil uil-estate"></i>
+                    <span class="link-name">Dashboard</span>
+                </a></li>
+                <li><a href="#">
+                    <i class="uil uil-estate"></i>
+                    <span class="link-name">Dashboard</span>
+                </a></li>
+                <li><a href="#">
+                    <i class="uil uil-estate"></i>
+                    <span class="link-name">Dashboard</span>
+                </a></li>
+            </ul>
+            <ul class="logout-mod">
+                <li><a href="#">
+                    <i class="uil uil-signout"></i>
+                    <span class="link-name">Logout</span>
+                </a></li>
+
+                <li>
+                    <a href="#">
+                        <i class="uil uil-moon"></i>
+                        <span class="link-name">Dark-mode</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </body>
 </html>
