Feat: import jquery and completed nav bar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <!--ICONSCOUT CSS-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
+    <!--JS/JQUERY-->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="/Resource/js/script.js"></script>
+
     <title>Document</title>
 </head>
 <body>
@@ -39,17 +43,22 @@
                     <span class="link-name">Dashboard</span>
                 </a></li>
             </ul>
-            <ul class="logout-mod">
+            <ul class="logout-mode">
                 <li><a href="#">
                     <i class="uil uil-signout"></i>
                     <span class="link-name">Logout</span>
                 </a></li>
 
-                <li>
+                <li class="mode">
                     <a href="#">
                         <i class="uil uil-moon"></i>
                         <span class="link-name">Dark-mode</span>
                     </a>
+
+                    <div class="mode-toggle">
+                        <span class="switch"></span>
+                    </div>
+                    
                 </li>
             </ul>
         </div>
