Feat: done switch mode

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <title>Document</title>
 </head>
 <body>
+
+    <!--NAV AREA-->
     <nav>
         <div class="logo-name">
             <div class="logo-image">
@@ -63,5 +65,13 @@
             </ul>
         </div>
     </nav>
+
+    <!--DASHBOARD AREA-->
+    <section class="dashboard">
+        <div class="top">
+            <i class="uil uil-bars"></i>
+        </div>
+    </section>
+
 </body>
 </html>
