--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="/Resource/js/script.js"></script>
 
+    <!--DataTables With Print Function-->
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="//cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="//cdn.datatables.net/buttons/2.2.3/css/buttons.dataTables.min.css">
+
+    <script src="//cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+
+    <script src="//cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+    <script src="//cdn.datatables.net/buttons/2.2.3/js/buttons.html5.min.js"></script>
+    <script src="//cdn.datatables.net/buttons/2.2.3/js/buttons.print.min.js"></script>
+
     <title>Document</title>
 </head>
 <body>
@@ -24,7 +38,7 @@
             <div class="logo-image">
                 <img src="/Resource/img/logo.png" alt="">
             </div>
-            <span class="logo_name">BETTER HOMES</span>
+            <span class="logo_name">QSDECOR</span>
         </div>
         <div class="menu-items">
             <ul class="nav-links">
@@ -69,7 +83,83 @@
     <!--DASHBOARD AREA-->
     <section class="dashboard">
         <div class="top">
-            <i class="uil uil-bars"></i>
+            <i class="uil uil-bars sidebar-toggle"></i>
+
+            <img src="/Resource/img/profile-1.jpg" alt="">
+        </div>
+
+        <div class="dash-content">
+            <div class="overview">
+                <div class="title">
+                    <i class="uil uil-tachometer-fast"></i>
+                    <span class="text">Dashboard</span>
+                </div>
+
+                <div class="boxes">
+                    <div class="box box1">
+                        <i class="uil uil-thumbs-up"></i>
+                        <span class="text">Total Likes</span>
+                        <span class="number">509,890</span>
+                    </div>
+
+                    <div class="box box2">
+                        <i class="uil uil-thumbs-up"></i>
+                        <span class="text">Total Likes</span>
+                        <span class="number">509,890</span>
+                    </div>
+
+                    <div class="box box3">
+                        <i class="uil uil-thumbs-up"></i>
+                        <span class="text">Total Likes</span>
+                        <span class="number">509,890</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="activity">
+                <div class="title">
+                    <i class="uil uil-clock"></i>
+                    <span class="text">Dashboard</span>
+                </div>
+
+                <div class="board">
+                    <table id="tbl_cart" width="100%">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Name</th>
+                                <th>Name</th>
+                                <th>Name</th>
+                                <th>Name</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td class="people">
+                                    <div class="people-de">
+                                        <h5>John Doe</h5>
+                                        <p>john@gmail.com</p>
+                                    </div>
+                                </td>
+                                <td class="people-des">
+                                    <h5>Software Developer</h5>
+                                    <p>Web dev</p>
+                                </td>
+                                <td class="active">
+                                    <p>Active</p>
+                                </td>
+                                <td class="role">
+                                    <p>Owner</p>
+                                </td>
+                                <td class="edit">
+                                    <a href="#">Edit</a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                
+            </div>
         </div>
     </section>
 
