Completed front end

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="/Resource/css/style.css?v=<?php echo time(); ?>">
+    <link rel="stylesheet" href="/Resource/css/query.css?v=<?php echo time(); ?>">
 
     <!--ICONSCOUT CSS-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -28,7 +29,7 @@
     <script src="//cdn.datatables.net/buttons/2.2.3/js/buttons.html5.min.js"></script>
     <script src="//cdn.datatables.net/buttons/2.2.3/js/buttons.print.min.js"></script>
 
-    <title>Document</title>
+    <title>QSDecor</title>
 </head>
 <body>
 
@@ -64,18 +65,6 @@
                     <i class="uil uil-signout"></i>
                     <span class="link-name">Logout</span>
                 </a></li>
-
-                <li class="mode">
-                    <a href="#">
-                        <i class="uil uil-moon"></i>
-                        <span class="link-name">Dark-mode</span>
-                    </a>
-
-                    <div class="mode-toggle">
-                        <span class="switch"></span>
-                    </div>
-                    
-                </li>
             </ul>
         </div>
     </nav>
@@ -117,11 +106,6 @@
             </div>
 
             <div class="activity">
-                <div class="title">
-                    <i class="uil uil-clock"></i>
-                    <span class="text">Dashboard</span>
-                </div>
-
                 <div class="board">
                     <table id="tbl_cart" width="100%">
                         <thead>
