Feat: add title for website and do its reponsive

--- a/add.html
+++ b/add.html
@@ -78,71 +78,54 @@
             <img src="/Resource/img/profile-1.jpg" alt="">
         </div>
 
-        <div class="dash-content">
-            <div class="overview">
-                <div class="title">
-                    <i class="uil uil-tachometer-fast"></i>
-                    <span class="text">Dashboard</span>
-                </div>
+        <div class="boddyy">
+            <div class="container">
+                <div class="title">Add apartment cart</div>
 
-                <div class="boxes">
-                    <div class="box box1">
-                        <i class="uil uil-thumbs-up"></i>
-                        <span class="text">Total Likes</span>
-                        <span class="number">509,890</span>
+                <form action="#">
+                    <div class="user-details">
+                        <div class="input-box">
+                            <span class="details">Apartment code</span>
+                            <input type="text" placeholder="Enter apartment code" required>
+                        </div>
+                        <div class="input-box">
+                            <span class="details">Agent name</span>
+                            <input type="text" placeholder="Enter agent name" required>
+                        </div>
+                        <div class="input-box">
+                            <span class="details">Area</span>
+                            <select name="area" id="select_area">
+                                <option value="">--Type--</option>
+                                <option value="2">Best-Seller</option>
+                                <option value="1">Featured</option>
+                                <option value="0">Non-Featured</option>
+                            </select>
+                        </div>
+                        <div class="input-box">
+                            <span class="details">Bedroom</span>
+                            <input type="text" placeholder="Enter bedroom" required>
+                        </div>
+                        <div class="input-box">
+                            <span class="details">SQM</span>
+                            <input type="text" placeholder="Enter aparment area" required>
+                        </div>
+                        <div class="input-box">
+                            <span class="details">House owner</span>
+                            <input type="text" placeholder="Enter house owner name" required>
+                        </div>
+                        <div class="input-box">
+                            <span class="details">Phone</span>
+                            <input type="text" placeholder="Enter phone number" required>
+                        </div>      
+                        <div class="input-box">
+                            <span class="details">Phone</span>
+                            <input type="text" placeholder="Enter phone number" required>
+                        </div>  
                     </div>
-
-                    <div class="box box2">
-                        <i class="uil uil-thumbs-up"></i>
-                        <span class="text">Total Likes</span>
-                        <span class="number">509,890</span>
+                    <div class="button">
+                        <input class="btn btn-primary" type="submit" value="ADDING">
                     </div>
-
-                    <div class="box box3">
-                        <i class="uil uil-thumbs-up"></i>
-                        <span class="text">Total Likes</span>
-                        <span class="number">509,890</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="activity">
-                <div class="board">
-                    <table id="tbl_cart" width="100%">
-                        <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Name</th>
-                                <th>Name</th>
-                                <th>Name</th>
-                                <th>Name</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td class="people">
-                                    <div class="people-de">
-                                        <h5>John Doe</h5>
-                                        <p>john@gmail.com</p>
-                                    </div>
-                                </td>
-                                <td class="people-des">
-                                    <h5>Software Developer</h5>
-                                    <p>Web dev</p>
-                                </td>
-                                <td class="active">
-                                    <p>Active</p>
-                                </td>
-                                <td class="role">
-                                    <p>Owner</p>
-                                </td>
-                                <td class="edit">
-                                    <a href="#">Edit</a>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+                </form>
                 
             </div>
         </div>
