--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <nav>
         <div class="logo-name">
             <div class="logo-image">
-                <img src="/Resource/img/logo.png" alt="">
+                <img src="/Resource/img/logo.jpeg" alt="">
             </div>
             <span class="logo_name">QSDECOR</span>
         </div>
