Feat: add 1 more box for data showing, make text in box center

--- a/HTML Files/index.html
+++ b/HTML Files/index.html
@@ -103,6 +103,12 @@
                         <span class="text">Total</span>
                         <span class="number">100</span>
                     </div>
+
+                    <div class="box box3">
+                        <i class="uil uil-thumbs-up"></i>
+                        <span class="text">Total</span>
+                        <span class="number">100</span>
+                    </div>
                 </div>
             </div>
 
