Feat: edit UI design + completed adding order function

--- a/HTML Files/add.html
+++ b/HTML Files/add.html
@@ -74,7 +74,7 @@
     <section class="dashboard">
         <div class="top">
             <i class="uil uil-bars sidebar-toggle"></i>
-            <span>WELCOME TO QSDECOR MANAGEMENT</span>
+            <span>WELCOME TO <span style="color: red;">QSDECOR</span> MANAGEMENT</span>
             <img src="/Resource/img/profile-1.jpg" alt="">
         </div>
 
@@ -123,7 +123,7 @@
                         </div>  
                     </div>
                     <div class="button">
-                        <input class="btn btn-primary" type="submit" value="ADDING">
+                        <input class="btn btn-primary" name="submit" type="submit" value="ADDING">
                     </div>
                 </form>
                 
