--- a/HTML Files/index.html
+++ b/HTML Files/index.html
@@ -74,7 +74,7 @@
     <section class="dashboard">
         <div class="top">
             <i class="uil uil-bars sidebar-toggle"></i>
-            <span>WELCOME TO QSDECOR MANAGEMENT</span>
+            <span>WELCOME TO <span style="color: red;">QSDECOR</span> MANAGEMENT</span>
             <img src="/Resource/img/profile-1.jpg" alt="">
         </div>
 
