Feat: add jquery counter to sales.php and change version of js file each time

--- a/HTML Files/index.html
+++ b/HTML Files/index.html
@@ -12,9 +12,17 @@
     <!--ICONSCOUT CSS-->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
+    <!--FONT AWESOME-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!--JS/JQUERY-->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="/Resource/js/script.js"></script>
+    <script src="./Resource/js/cleave.js"></script>
+
+    <!-- Jquery Counter Animation -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css" integrity="sha512-6lLUdeQ5uheMFbWm3CP271l14RsX1xtx+J5x2yeIDkkiBpeVTNhTqijME7GgRKKi6hCqovwCoBTlRBEC20M8Mg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!--DataTables With Print Function-->
     <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css">
@@ -29,7 +37,8 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
     <script src="//cdn.datatables.net/buttons/2.2.3/js/buttons.html5.min.js"></script>
     <script src="//cdn.datatables.net/buttons/2.2.3/js/buttons.print.min.js"></script>
-
+    <script src="/Vendors/js/jquery.waypoints.min.js"></script>
+    
     <title>QSDecor</title>
 </head>
 <body>
@@ -101,7 +110,7 @@
                     <div class="box box3">
                         <i class="uil uil-thumbs-up"></i>
                         <span class="text">Total</span>
-                        <span class="number">100</span>
+                        <span class="number num">100</span>
                     </div>
 
                     <div class="box box3">
